refactor send transaction notification